test/tests/compiler/6_statements_and_conditional_expressions/valid/if_null_body.plx
pub fn main(none) i32 {
    x: i32 = 0
    if 0 {
        ;
    }
    else {
        x = 1
    }
    return x
}
